adjust forms adjustments to travel page forms

--- a/pages/announcementpage.html
+++ b/pages/announcementpage.html
@@ -78,7 +78,7 @@
                     <div class="price"> R$100.00 </div>
                     <p>Picos para Teresina</p>
                     <div class="date">23/01/2023</div>
-                    <a href="#" class="btn"> Acessar</a>
+                    <a class="btn" onclick="showAdd()"> Acessar</a>
                 </div>
             </div>
 
@@ -91,7 +91,7 @@
                     <div class="price"> R$100.00 </div>
                     <p>Teresina para Picos</p>
                     <div class="date">24/01/2023</div>
-                    <a href="#" class="btn"> Acessar</a>
+                    <a class="btn" onclick="showAdd()"> Acessar</a>
                 </div>
             </div>
 
@@ -104,7 +104,7 @@
                     <div class="price"> R$100.00 </div>
                     <p>Picos para Teresina</p>
                     <div class="date">25/01/2023</div>
-                    <a href="#" class="btn"> Acessar</a>
+                    <a class="btn" onclick="showAdd()"> Acessar</a>
                 </div>
             </div>
 
@@ -117,7 +117,7 @@
                     <div class="price"> R$100.00 </div>
                     <p>Teresina para Picos</p>
                     <div class="date">26/01/2023</div>
-                    <a href="#" class="btn"> Acessar</a>
+                    <a class="btn" onclick="showAdd()"> Acessar</a>
                 </div>
             </div>
 
@@ -130,7 +130,7 @@
                     <div class="price"> R$100.00 </div>
                     <p>Picos para Teresina</p>
                     <div class="date">27/01/2023</div>
-                    <a href="#" class="btn"> Acessar</a>
+                    <a class="btn" onclick="showAdd()"> Acessar</a>
                 </div>
             </div>
             <div class="box" data-aos="fade-up">
@@ -142,13 +142,13 @@
                     <div class="price"> R$100.00 </div>
                     <p>Teresina para Picos</p>
                     <div class="date">28/01/2023</div>
-                    <a href="#" class="btn"> Acessar</a>
+                    <a class="btn" onclick="showAdd()"> Acessar</a>
                 </div>
             <!-- </div> -->
         </div>
         <div class="addAnnouncement">
             <i class="fas fa-plus" onclick="showAdd()"></i>
-            <span class="tooltipe">Adicionar</span>
+            <span class="tooltipe">Solicitar viagem?</span>
         </div>
         <div class="delete" id="formCreate">
             <div class="formAdd">
@@ -188,10 +188,6 @@
                         <div class="input-account">
                             <label>Cep do local de saída da viagem</label>
                             <input id="startZipCode" type="text" placeholder="Cep origem" minlength="8" maxlength="8" required>
-                        </div>
-                        <div class="input-account">
-                            <label>Dia da Viagem</label>
-                            <input id="date" type="date" placeholder="Dia da viagem" minlength="8" maxlength="8" required>
                         </div>
                     </div>
                     <div class="column">
