--- a/pages/announcementpage.html
+++ b/pages/announcementpage.html
@@ -146,7 +146,7 @@
                 </div>
             <!-- </div> -->
         </div>
-        <div class="addAnnouncement">
+        <!-- <div class="addAnnouncement">
             <i class="fas fa-plus" onclick="showAdd()"></i>
             <span class="tooltipe">Solicitar viagem?</span>
         </div>
@@ -255,7 +255,7 @@
                     <button class="yes" onclick="addAnnouncement()">Sim</button>
                 </div>
             </div>
-        </div>
+        </div> -->
 
 
 
